--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Mengyuan Wang"
-  avatar           : "images/Me.png"
+  avatar           : "images/Me1.png"
   bio              : "Yonsei University"
   location         : "Seoul, Korea"
   employer         :
