--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/Me1.png"
   bio              : "Yonsei University"
   location         : "Seoul, Korea"
-  employer         :
+  email            : "mengyuan.wang000@yonsei.ac.kr"
   pubmed           : 
   googlescholar    : #"https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "mengyuan.wang000@yonsei.ac.kr"
