--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Mengyuan Wang"
   avatar           : "images/Me2.png"
   bio              : "Yonsei University"
-  location         : "Seoul, Korea"
+  location         : "Seoul, South Korea"
   email            : "mengyuan.wang000@yonsei.ac.kr"
   pubmed           : 
   googlescholar    : #"https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
